<resources>
    <string name="app_name">Carr-o</string>

    <string name="save_button">Save</string>
    <string name="submit">Submit</string>

    <!-- Home -->
    <string name="hello">Hello, </string>
    <string name="new_comer">Newcomer</string>
    <string name="good_terms">All is well!</string>
    <string name="bad_terms">Your car needs maintenance!</string>
    <string name="maint_complete">Complete</string>

    <string name="main_notification_channel_name">Primary</string>
    <string name="notification_title">Car Needs Maintenance</string>
    <string name="notification_content">Click to check on what needs maintenance.</string>

    <!-- Log -->
    <string name="search">Search</string>

    <string name="please_signin">Please Sign into Account</string>

    <!-- New Log -->
    <string name="display_date">Select Maitenance Date</string>
    <string name="select_date">Select Date</string>
    <string name="done_at">Location of Maintenance</string>
    <string name="current_maint_mileage">Current Mileage</string>
    <string name="cost_of_mait">Price of Maintenance</string>
    <string name="mait_notes">Notes</string>
    <string name="error_missing_information">Please Enter Information</string>
    <string name="save_log">SAVE</string>
    <string name="maitenance_options_prompt">Choose maintenance type...</string>
    <string-array name="maitenance_options">
        <item>Choose an option...</item>
        <item>Oil Change</item>
        <item>Engine Air Filter</item>
        <item>Spark Plug</item>
        <item>Coolant</item>
        <item>Transmission Fluid</item>
        <item>Brakes</item>
        <item>Brake Fluid</item>
        <item>Other</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_maps">Logs</string>
    <string name="title_profile">Profile</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
